--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,4 +54,5 @@
     <string name="formTitreEcole">Ecole</string>
     <string name="FormTitreAnneeScolaire">Année scolaire</string>
     <string name="FormTitreSexe">Sexe</string>
+    <string name="btnAddPresence">Ajouter une présence</string>
 </resources>
