sante question mieux

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -84,4 +84,6 @@
     <string name="form_hint_question_complement">Complement</string>
     <string name="btn_next">Suivant</string>
     <string name="btn_prev">Précédent</string>
+    <string name="switch_non">non</string>
+    <string name="switch_oui">oui</string>
 </resources>
